--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ci": "npm run lint && npm run build"
   },
   "dependencies": {
+    "@dataconnect/admin-generated": "file:src/dataconnect-admin-generated",
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "@hookform/resolvers": "^5.2.2",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
